@startuml

hide circle
hide empty fields
hide empty methods

class ContentItem
class LockVersion
class PathReservation

package "Dependencies" {
  class LinkSet
  class Link
}

package "Event Log" {
  class Event
}

package "Uniqueness Constraint" {
  class Location
  class Translation
  class State
  class UserFacingVersion
}

package "Access Control" {
  class AccessLimit
  class User
}

ContentItem <-- LinkSet
ContentItem <-up- Link
LinkSet *--> Link

ContentItem <-- Location
ContentItem <-- Translation
ContentItem <-- State
ContentItem <.. LockVersion

ContentItem <-- UserFacingVersion
ContentItem <-down- AccessLimit
LockVersion ..> LinkSet
AccessLimit o--> User

@enduml
